--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,17 @@
     <link rel="stylesheet" href="./fonts/font.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    
+    <section>
+        <div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam autem mollitia officiis possimus natus
+                doloribus sunt libero nulla praesentium! Cum id fuga dolor vero hic, dolore dolores animi accusantium
+                iste!
+            </p>
+        </div>
+    </section>
 </body>
+
 </html>
