create new branch HW3

--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,17 @@
 </head>
 
 <body>
+    <div class="foto">
+        <img src="./fonts/images/IMG_4997.jpg" alt="jdhj" width="300">
+    </div>
 
+    <div class="foto">
+        <img src="./fonts/images/IMG_4998.jpg" alt="jdhj" width="300">
+    </div>
+
+    <div class="foto">
+        <img src="./fonts/images/IMG_4999.jpg" alt="jdhj" width="300">
+    </div>
 </body>
 
 </html>
