create new branch HW6

--- a/index.html
+++ b/index.html
@@ -1,14 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hillel Homework№</title>
-    <link rel="stylesheet" href="./fonts/font.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Homework 6</title>
+    <link rel="stylesheet" href="/style/style.css">
+
 </head>
+
 <body>
-    
+    <table>
+        <caption class="title">Виды селекторов</caption>
+        <tbody>
+            <tr>
+                <th>Селектор</th>
+                <th>Описание</th>
+            </tr>
+            <tr>
+                <td>*</td>
+                <td>Выбор всех элементов</td>
+
+            </tr>
+            <tr>
+                <td>#myId</td>
+                <td>Выбирает элемент с идентификатором myId</td>
+
+            </tr>
+            <tr>
+                <td>.myClass</td>
+                <td>Выбирает все элементы с классом myClass</td>
+
+            </tr>
+            <tr>
+                <td>тег tg</td>
+                <td>Выбор всех тегов td</td>
+
+            </tr>
+            <tr>
+                <td>:hover</td>
+                <td>Выбор всех псевдоклассов hover</td>
+
+            </tr>
+            <tr>
+                <td>[type]</td>
+                <td>Выбирает все элементы с атрибутом type</td>
+
+            </tr>
+            <tr>
+                <td colspan="2">Совмещенные</td>
+            </tr>
+
+            <tr>
+                <td>теги span div</td>
+                <td>Задание правил для всех тегов span и div</td>
+
+            </tr>
+            <tr>
+                <td>.class .class</td>
+                <td>Задание правил для всех указанных class</td>
+
+            </tr>
+            <tr>
+                <td>тег + тег</td>
+                <td>Выбирает все элементы, которые расположены рядом</td>
+
+            </tr>
+            <tr>
+                <td>.class>.class</td>
+                <td>Выбор элементов по вложенности</td>
+
+            </tr>
+            <tr>
+                <td>Приоритет селекторов</td>
+                <td>по весу</td>
+
+            </tr>
+
+        </tbody>
+    </table>
+    <section>
+        <div>
+            <h1>Цитаты</h1>
+            <p id="myId">Немного здравого смысла, немного терпимости, немного чувства юмора, и можно очень уютно
+                устроиться на этой планете.</p>
+            <span id="myI" class="clas">Будь мудрей других и не показывай им этого…</span>
+            <input id="inputId" type="text" name="inputname">
+            <a href="https://www.facebook.com">Facebook</a>
+            <a href="#">Style</a>
+            <p class="logo">Сила воображения важнее знаний.</p>
+            <p class="logo-bg">В любви всегда есть нем ого безумия. </p>
+        </div>
+    </section>
 </body>
+
 </html>
