--- a/index.html
+++ b/index.html
@@ -1,14 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hillel Homework№</title>
-    <link rel="stylesheet" href="./fonts/font.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Homework 7</title>
+    <link rel="stylesheet" href="/style/style.css">
+
 </head>
+
 <body>
-    
+    <section>
+        <div class="container">
+            <div class="card">
+                <img src="./img/CabanaClubColourPop.jpg" alt="Cabana">
+                <h1 class="card-title">Тіні ColourPop Cabana Club</h1>
+                <p class="price">550грн</p>
+                <p class="card-text">Поєднання яскравих тропічних відтінків з відтінками нейтральних тонів </p>
+                <p><button>Додати у корзину</button></p>
+            </div>
+            <div class="card">
+                <img src="./img/ColourPop-Uh-huh-honey.jpg" alt="Uh-huh honey">
+                <h1 class="card-title">Тіні ColourPop - Uh-huh honey</h1>
+                <p class="price">380грн</p>
+                <p class="card-text">Солодкий, як мед, яскравий, мов сонце. Яскрава і дуже гарна палетка</p>
+                <p><button>Додати у корзину</button></p>
+            </div>
+            <div class="card">
+                <img src="./img/Jeffree-Star-Blue-Blood.jpg" alt="Blue Blood Palette">
+                <h1 class="card-title">Тіні Jeffree Star - Blue Blood Palette</h1>
+                <p class="price">1550грн</p>
+                <p class="card-text">Чудова якість, досконала пігментація і шовковистість тіней</p>
+                <p><button>Додати у корзину</button></p>
+            </div>
+            <div class="card">
+                <img src="./img/mini_nudes_re.jpg" alt="nudes">
+                <h1 class="card-title">Jeffree Star - Mini Nudes Bundle Volume</h1>
+                <p class="price">1350грн</p>
+                <p class="card-text">Набір із вісьми рідких, нюдових матових помад</p>
+                <p><button>Додати у корзину</button></p>
+            </div>
+            <div class="card">
+                <img src="./img/morphe-james2.jpg" alt="James Charles">
+                <h1 class="card-title">Тіні Morphe - The James Charles </h1>
+                <p class="price">950грн</p>
+                <p class="card-text">Палітра складається з 39 відтінків високопігментованих тіней
+                </p>
+                <p><button>Додати у корзину</button></p>
+            </div>
+            <div class="card">
+                <img src="./img/morphe35s.jpg" alt="Тіні Morphe-35S">
+                <h1 class="card-title">Тіні Morphe - 35S Shadows Volume</h1>
+                <p class="price">650грн</p>
+                <p class="card-text">Яскрава, дуже гарна палетка. Чудова якість, досконала пігментація </p>
+                <p><button>Додати у корзину</button></p>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
