create new branch HW9

--- a/index.html
+++ b/index.html
@@ -1,14 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hillel Homework№</title>
+    <title>Homework9</title>
     <link rel="stylesheet" href="./fonts/font.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./style/style.css">
+
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="content">
+            <div class="card float-left">
+                <p class="number">1</p>
+            </div>
+            <div class="card float-right">
+                <p class="number">2</p>
+            </div>
+        </div>
+        <div class="content">
+            <div class="card float-left">
+                <p class="number">1</p>
+            </div>
+            <div class="float-right">
+                <div class="card-mini float-right">
+                    <p class="number-mini">5</p>
+                </div>
+                <div class="card-mini float-right">
+                    <p class="number-mini">4</p>
+                </div>
+                <div class="card-mini float-right">
+                    <p class="number-mini">3</p>
+                </div>
+                <div class="card-mini float-right">
+                    <p class="number-mini">2</p>
+                </div>
+            </div>
+        </div>
+        <div class="content">
+            <div class="card float-left">
+                <p class="number">1</p>
+            </div>
+            <div class="card float-left">
+                <p class="number">2</p>
+            </div>
+            <div class="card float-right">
+                <p class="number">4</p>
+            </div>
+            <div class="card float-right">
+                <p class="number">3</p>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
