create new branch HW8

--- a/index.html
+++ b/index.html
@@ -1,14 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hillel Homework№</title>
+    <title>Homework8</title>
     <link rel="stylesheet" href="./fonts/font.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./style/style.css">
+
 </head>
+
 <body>
-    
+    <section class="top-container">
+        <div class="container">
+            <header class="header">
+                <nav>
+                    <lu class="flex">
+                        <li class="nav-item">ГЛАВНАЯ</li>
+                        <li class="nav-item">ОБ АВТОРЕ</li>
+                        <li class="nav-item">РАБОТЫ</li>
+                        <li class="nav-item">ПРОЦЕСС</li>
+                        <li class="nav-item">КОНТАКТЫ</li>
+                    </lu>
+                </nav>
+                <div>
+                    <h1>Дизайн и верстка</h1>
+                    <p class="text text-desc">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.
+                        Lorem
+                        Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+                    <a href="#" class="btn ">НАПИСАТЬ МНЕ</a>
+                </div>
+            </header>
+        </div>
+    </section>
+    <section class="center-container">
+        <div class="container">
+            <div>
+                <h2 class="about-me text-center">Обо мне</h2>
+                <p class="text margin-center">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.
+                    Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+            </div>
+        </div>
+    </section>
+    <section class="projects-container">
+        <div class="container flex space-between">
+            <div class="box">
+                <img src="./img/Group.png" alt="foto">
+                <div class="projects">
+                    <h3 class="rating">40+</h3>
+                    <p class="text-projects">проектов</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="./img/Group.png" alt="foto">
+                <div class="projects">
+                    <h3 class="rating">40+</h3>
+                    <p class="text-projects">проектов</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="./img/Group.png" alt="foto">
+                <div class="projects">
+                    <h3 class="rating">40+</h3>
+                    <p class="text-projects">проектов</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="./img/Group.png" alt="foto">
+                <div class="projects">
+                    <h3 class="rating">40+</h3>
+                    <p class="text-projects">проектов</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="./img/Group.png" alt="foto">
+                <div class="projects">
+                    <h3 class="rating">40+</h3>
+                    <p class="text-projects">проектов</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="./img/Group.png" alt="foto">
+                <div class="projects">
+                    <h3 class="rating">40+</h3>
+                    <p class="text-projects">проектов</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="content">
+        <div class="container">
+            <div class="content">
+                <h2 class="about-me text-center">Как я работаю</h2>
+                <p class="text margin-center">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.
+                    Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+            </div>
+            <iframe width="1100" height="600" src="https://www.youtube.com/embed/heYPCc8M3VI"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+    </section>
+    <section class="footer-container">
+        <div class="container">
+            <h3 class="rating">Иванов Иван</h3>
+            <p class="text-footer">(с) 2018. Все права защищены.</p>
+        </div>
+    </section>
+
 </body>
+
 </html>
