create new branch HW10

--- a/index.html
+++ b/index.html
@@ -1,14 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hillel Homework№</title>
+    <title>Homework10</title>
     <link rel="stylesheet" href="./fonts/font.css">
     <link rel="stylesheet" href="./css/style.css">
+
 </head>
+
 <body>
-    
+    <div class="container">
+        <ul class="menu">
+            <li>
+                <a href="#" class="menu-link">Home</a>
+            </li>
+            <li>
+                <a href="#" class="menu-link">Products</a>
+                <ul class="nav-menu-list">
+                    <li class="menu-list">
+                        <a href="#" class="menu-link">Products 1</a>
+                        <p class="text">+</p>
+                    </li>
+                    <li class="menu-list">
+                        <a href="#" class="menu-link">Products 2</a>
+                        <p class="text">+</p>
+                        <ul class="sub-sub-menu-list">
+                            <li class="sub-menu-list">
+                                <a href="#" class="menu-link">Sub Item</a>
+                            </li>
+                            <li class="sub-menu-list">
+                                <a href="#" class="menu-link">Sub Item</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+
+            <li>
+                <a href="#" class="menu-link">About</a>
+            </li>
+            <li>
+                <a href="#" class="menu-link">Contact</a>
+            </li>
+            <!-- <li>
+            <a href="#">Форум</a>
+        </li> -->
+        </ul>
+    </div>
 </body>
+
 </html>
