create new branch HW3

--- a/gallery.html
+++ b/gallery.html
@@ -20,6 +20,11 @@
     <div class="foto">
         <img src="./fonts/images/IMG_4999.jpg" alt="jdhj" width="300">
     </div>
+    <div>
+        <nav>
+            <a href="./index.html">Перейти на Главную страницу</a>
+        </nav>
+    </div>
 </body>
 
 </html>
