--- a/index.html
+++ b/index.html
@@ -11,7 +11,23 @@
 </head>
 
 <body>
-
+    <div>
+        <h1>Список команд по работе с терминалом:</h1>
+        <ul>
+            <li>git status - Перечисляет все новые или изменённые файлы, которые нуждаются в фиксации</li>
+            <li>git add (файл) - Индексирует указанный файл для последующего коммита</li>
+            <li>git commit -m "[сообщение с описанием]" - Фиксирует проиндексированные изменения и сохраняет их в
+                историю версий</li>
+            <li>git branch - Список именованных веток коммитов с указанием выбранной ветки</li>
+            <li>git branch [имя ветки] - Создаёт новую ветку</li>
+            <li>git branch -d [имя ветки] - Удаляет выбранную ветку</li>
+            <li>git push [удалённый репозиторий] [ветка] - Загружает все изменения локальной ветки в удалённый
+                репозиторий</li>
+        </ul>
+        <nav>
+            <a href="./gallery.html">Перейти в фото</a>
+        </nav>
+    </div>
 </body>
 
 </html>
